src/third_party/blink/web_tests/virtual/web-components-v0-disabled/fast/dom/custom/frameElement-crash-expected.txt
CONSOLE ERROR: line 17: Uncaught TypeError: document.registerElement is not a function
Test that accessing window.frameElement from a custom iframe does not crash.

On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".

FAIL Unexpected error: Uncaught TypeError: document.registerElement is not a function
FAIL successfullyParsed should be true. Was false.

TEST COMPLETE

PASS Did not crash
FAIL successfullyParsed should be true. Was false.

TEST COMPLETE

